--- a/quart_2/seminar_11/new.ipynb
+++ b/quart_2/seminar_11/new.ipynb
@@ -214,26 +214,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "76f5c081",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Many thanks to my group for the collective solution of problems at seminars \\nunder the guidance of the teacher of the GeekBrains school Danil Samodurov!\\n\\nhttps://gb.ru/lessons/274943'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Many thanks to my group for the collective solution of problems at seminars \n",
+      "under the guidance of the teacher of the GeekBrains School Danil Samodurov!\n",
+      "\n",
+      "https://gb.ru/lessons/274943\n"
+     ]
     }
    ],
    "source": [
-    "'''Many thanks to my group for the collective solution of problems at seminars \n",
-    "under the guidance of the teacher of the GeekBrains school Danil Samodurov!\n",
+    "print('''Many thanks to my group for the collective solution of problems at seminars \n",
+    "under the guidance of the teacher of the GeekBrains School Danil Samodurov!\n",
     "\n",
-    "https://gb.ru/lessons/274943'''"
+    "https://gb.ru/lessons/274943''')"
    ]
   },
   {
